@@ -34,11 +34,14 @@ class CategoriesPage extends QueryPage {
 		$NScat = NS_CATEGORY;
 		$dbr =& wfGetDB( DB_SLAVE );
 		$categorylinks = $dbr->tableName( 'categorylinks' );
-		return "SELECT DISTINCT 'Categories' as type, 
+		$s= "SELECT 'Categories' as type, 
 				{$NScat} as namespace,
 				cl_to as title,
-				1 as value
-			   FROM $categorylinks";
+				1 as value,
+				COUNT(*) as count
+			   FROM $categorylinks
+			   GROUP BY cl_to";
+		return $s;
 	}
 	
 	function sortDescending() {
@@ -48,7 +51,9 @@ class CategoriesPage extends QueryPage {
 	function formatResult( $skin, $result ) {
 		global $wgLang;
 		$title = Title::makeTitle( NS_CATEGORY, $result->title );
-		return $skin->makeLinkObj( $title, $title->getText() );
+		$plink = $skin->makeLinkObj( $title, $title->getText() );
+		$nlinks = wfMsg( 'nlinks', $result->count );
+		return "$plink ($nlinks)";
 	}
 }
 
